WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12016
REGRESSION(
r18342
): fast/text/stroking-decorations.html test fails with bus error in no-svg build
https://bugs.webkit.org/show_bug.cgi?id=12016
Summary
REGRESSION(r18342): fast/text/stroking-decorations.html test fails with bus e...
David Kilzer (:ddkilzer)
Reported
2006-12-28 12:16:38 PST
The fast/text/stroking-decorations.html test failes with a Bus Error in the no-svg build. Stack trace: Thread 0 Crashed: 0 libSystem.B.dylib 0x9000af30 __vfprintf + 479 1 libSystem.B.dylib 0x9000ad40 sprintf + 480 2 com.apple.WebCore 0x0100e850 WebCore::TextStream::operator<<(float) + 56 (TextStream.cpp:102) 3 com.apple.WebCore 0x01031921 WebCore::operator<<(WebCore::TextStream&, WebCore::RenderObject const&) + 211 7 (RenderTreeAsText.cpp:170) 4 com.apple.WebCore 0x010326dc WebCore::write(WebCore::TextStream&, WebCore::RenderObject const&, int) + 36 (RenderTreeAsText.cpp:299) 5 com.apple.WebCore 0x010327c3 WebCore::write(WebCore::TextStream&, WebCore::RenderObject const&, int) + 267 (RenderTreeAsText.cpp:309) 6 com.apple.WebCore 0x010327c3 WebCore::write(WebCore::TextStream&, WebCore::RenderObject const&, int) + 267 (RenderTreeAsText.cpp:309) 7 com.apple.WebCore 0x01032bbc WebCore::write(WebCore::TextStream&, WebCore::RenderLayer&, WebCore::IntRect const&, WebCore::IntRect const&, WebCore::IntRect const&, WebCore::IntRect const&, int, int) + 694 (RenderTreeAsText.cpp :367) 8 com.apple.WebCore 0x010325e1 WebCore::writeLayers(WebCore::TextStream&, WebCore::RenderLayer const*, WebCo re::RenderLayer*, WebCore::IntRect const&, int) + 459 (RenderTreeAsText.cpp:393) 9 com.apple.WebCore 0x01032692 WebCore::writeLayers(WebCore::TextStream&, WebCore::RenderLayer const*, WebCo re::RenderLayer*, WebCore::IntRect const&, int) + 636 (RenderTreeAsText.cpp:401) 10 com.apple.WebCore 0x01032caf WebCore::externalRepresentation(WebCore::RenderObject*) + 235 (RenderTreeAsTe xt.cpp:463) 11 com.apple.WebCore 0x0107fcae -[WebCoreFrameBridge renderTreeAsExternalRepresentation] + 36 (WebCoreFrameBr idge.mm:894) 12 com.apple.WebKit 0x0020be99 -[WebFrame(WebKitDebug) renderTreeAsExternalRepresentation] + 57 13 DumpRenderTree 0x00007903 dump + 828 (DumpRenderTree.m:546) 14 DumpRenderTree 0x0000891e -[WaitUntilDoneDelegate webView:locationChangeDone:forDataSource:] + 148 (Dum pRenderTree.m:719) 15 DumpRenderTree 0x00008aa1 -[WaitUntilDoneDelegate webView:didFinishLoadForFrame:] + 67 (DumpRenderTree. m:746) 16 libobjc.A.dylib 0x90a59d76 objc_msgSendv + 54 17 com.apple.Foundation 0x925ff43e -[NSInvocation invoke] + 932 18 com.apple.Foundation 0x92625433 -[NSInvocation invokeWithTarget:] + 67 19 com.apple.WebKit 0x00268732 -[_WebSafeForwarder forwardInvocation:] + 448 (WebView.mm:1660) 20 com.apple.Foundation 0x925fe4f4 -[NSObject(NSForwardInvocation) forward::] + 469 21 libobjc.A.dylib 0x90a59cc1 _objc_msgForward + 49 22 com.apple.WebKit 0x0029bc9d WebFrameLoaderClient::dispatchDidFinishLoad() + 153 (WebFrameLoaderClient.mm: 630) 23 com.apple.WebCore 0x012891e8 WebCore::FrameLoader::checkLoadCompleteForThisFrame() + 1080 (FrameLoaderMac. mm:1043) 24 com.apple.WebCore 0x0129dd8c WebCore::FrameLoader::checkLoadComplete() + 144 (FrameLoader.cpp:2124) 25 com.apple.WebCore 0x0129e445 WebCore::FrameLoader::finishedLoading() + 227 (FrameLoader.cpp:1956) 26 com.apple.WebCore 0x0128f7c5 WebCore::MainResourceLoader::didFinishLoading() + 211 (MainResourceLoaderMac. mm:324) 27 com.apple.WebCore 0x0128d858 WebCore::ResourceLoader::didFinishLoading(WebCore::ResourceHandle*) + 24 (Res ourceLoaderMac.mm:447) 28 com.apple.WebCore 0x0129944d -[WebCoreResourceHandleAsDelegate connectionDidFinishLoading:] + 79 (Resource HandleMac.mm:296) 29 com.apple.Foundation 0x9265ee00 -[NSURLConnection(NSURLConnectionInternal) _sendDidFinishLoadingCallback] + 1 76 30 com.apple.Foundation 0x9265cea5 -[NSURLConnection(NSURLConnectionInternal) _sendCallbacks] + 748 31 com.apple.Foundation 0x9265cb41 _sendCallbacks + 201 32 com.apple.CoreFoundation 0x9082afd2 CFRunLoopRunSpecific + 1213 33 com.apple.CoreFoundation 0x9082ab0e CFRunLoopRunInMode + 61 34 com.apple.Foundation 0x9262ddc6 -[NSRunLoop runMode:beforeDate:] + 182 35 DumpRenderTree 0x00009dfe runTest + 950 (DumpRenderTree.m:1086) 36 DumpRenderTree 0x00006da9 dumpRenderTree + 3355 (DumpRenderTree.m:400) 37 DumpRenderTree 0x00006fb0 main + 70 (DumpRenderTree.m:450) 38 DumpRenderTree 0x00002da2 _start + 216 39 DumpRenderTree 0x00002cc9 start + 41
Attachments
Patch v1
(2.08 KB, patch)
2006-12-28 13:27 PST
,
David Kilzer (:ddkilzer)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2006-12-28 12:19:17 PST
Considering this a regression since DRT didn't crash before
r18342
when LayoutTests/fast/text/stroking-decorations.html was added.
David Kilzer (:ddkilzer)
Comment 2
2006-12-28 13:27:30 PST
Created
attachment 12086
[details]
Patch v1 Fixes incorrect initialization of precisionFormats array (missing comma caused pre-processor concatenation of last two strings) in TextStream.cpp. Fixes RenderTreeAsText::externalRepresentation() to set the precision of the TextStream regardless of SVG support. This allows fast/text/stroking-decorations.html and fast/text/stroking.html to pass on the no-svg build.
David Kilzer (:ddkilzer)
Comment 3
2006-12-28 13:41:02 PST
(In reply to
comment #2
)
> Created an attachment (id=12086) [edit] > Patch v1
I ran all tests in both the svg and no-svg builds, and there are no regressions caused by these changes (only fixes to the stroking tests for the no-svg build).
mitz
Comment 4
2006-12-28 14:28:52 PST
Comment on
attachment 12086
[details]
Patch v1 Missing space: + - fixhttp://bugs.webkit.org/show_bug.cgi?id=12016 "Make fast/text/stroking-decorations.html and fast/text/stroking.html pass on no-svg build" just repeats the bug's summary, adding the name of another failing test. It's redundant. You could explain the change (HTML tests now print out the stroke width, which is a float, so the precision needs to be set) or just not write anything. r=me
David Kilzer (:ddkilzer)
Comment 5
2006-12-28 15:08:41 PST
Committed revision 18459.
Darin Adler
Comment 6
2007-01-02 15:24:00 PST
<
rdar://problem/4897040
> no-svg Buildbot crash at WebCore::TextStream::operator<<(float) + 72
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug