2006-12-28  David Kilzer  <ddkilzer@webkit.org>

Reviewed by Mitz.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12016
          REGRESSION: fast/text/stroking-decorations.html test fails with bus error in no-svg build

        No test cases (no change in functionality).

        * platform/TextStream.cpp: Properly initialize presicionFormats.
        * rendering/RenderTreeAsText.cpp:
        (WebCore::externalRepresentation): HTML tests now print out the stroke width, which is a float,
        so the precision needs to be set.



Canonical link: https://commits.webkit.org/15503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18459 268f45cc-cd09-0410-ab3c-d52691b4dbfc